[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/lobo_inimigo-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://scripts/weak_spot.gd" type="Script" id=3]
[ext_resource path="res://scenes/barradevida_inimigo.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.9023, 17.6296 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.0079, 8.08706 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.7172, 8.96484 )

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BaseArmoredDemo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BaseArmoredDemo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseArmoredDemo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseArmoredDemo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[node name="enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 0, -0.364529 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BaseArmoredDemo" type="Sprite" parent="."]
position = Vector2( 3.8158, -7.89562 )
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.32089, -9.75087 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( -60, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.907366, -0.127885 )
scale = Vector2( 1.6156, 0.80817 )

[node name="weak_spot" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="weak_spot"]
visible = false
position = Vector2( 3.79654, 0 )
shape = SubResource( 2 )

[node name="attack" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="esquerda" type="CollisionPolygon2D" parent="attack"]
position = Vector2( -1.27886, 0 )
polygon = PoolVector2Array( -15.6075, -7.405, -10.4068, -7.57552, -10.9184, 2.82588, -17.3127, 2.82588, -17.3979, -7.57552 )
disabled = true

[node name="direita" type="CollisionPolygon2D" parent="attack"]
position = Vector2( 36.501, 0 )
polygon = PoolVector2Array( -15.6075, -7.405, -10.4068, -7.57552, -10.9184, 2.82588, -17.3127, 2.82588, -17.3979, -7.57552 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( 4.2163, -17.9193 )
shape = SubResource( 3 )

[node name="barradevida_inimigo" parent="." instance=ExtResource( 4 )]
margin_left = -11.0
margin_top = -15.0
margin_right = 14.0
margin_bottom = -11.0
color = Color( 0.117647, 0.286275, 0.870588, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 4 )
anims/run = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="direction" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="collision" type="CollisionShape2D" parent="direction"]
position = Vector2( 3.79654, 0 )
shape = SubResource( 1 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="damage" from="weak_spot" to="." method="_on_weak_spot_damage"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_entered"]
[connection signal="area_entered" from="direction" to="." method="_on_direction_area_entered"]
